; ModuleID = '/home/carl/AnghaBench/seafile/common/index/extr_index.c_ie_match_stat.c'
source_filename = "/home/carl/AnghaBench/seafile/common/index/extr_index.c_ie_match_stat.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cache_entry = type { i32 }

@CE_MATCH_IGNORE_VALID = common dso_local global i32 0, align 4
@CE_MATCH_IGNORE_SKIP_WORKTREE = common dso_local global i32 0, align 4
@CE_VALID = common dso_local global i32 0, align 4
@DATA_CHANGED = common dso_local global i32 0, align 4
@istate = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ie_match_stat(%struct.cache_entry* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.cache_entry*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store %struct.cache_entry* %0, %struct.cache_entry** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  %11 = load i32, i32* %7, align 4
  %12 = load i32, i32* @CE_MATCH_IGNORE_VALID, align 4
  %13 = and i32 %11, %12
  store i32 %13, i32* %9, align 4
  %14 = load i32, i32* %7, align 4
  %15 = load i32, i32* @CE_MATCH_IGNORE_SKIP_WORKTREE, align 4
  %16 = and i32 %14, %15
  store i32 %16, i32* %10, align 4
  %17 = load i32, i32* %10, align 4
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %24, label %19

19:                                               ; preds = %3
  %20 = load %struct.cache_entry*, %struct.cache_entry** %5, align 8
  %21 = call i64 @ce_skip_worktree(%struct.cache_entry* %20)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %24

23:                                               ; preds = %19
  store i32 0, i32* %4, align 4
  br label %40

24:                                               ; preds = %19, %3
  %25 = load i32, i32* %9, align 4
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %35, label %27

27:                                               ; preds = %24
  %28 = load %struct.cache_entry*, %struct.cache_entry** %5, align 8
  %29 = getelementptr inbounds %struct.cache_entry, %struct.cache_entry* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 4
  %31 = load i32, i32* @CE_VALID, align 4
  %32 = and i32 %30, %31
  %33 = icmp ne i32 %32, 0
  br i1 %33, label %34, label %35

34:                                               ; preds = %27
  store i32 0, i32* %4, align 4
  br label %40

35:                                               ; preds = %27, %24
  %36 = load %struct.cache_entry*, %struct.cache_entry** %5, align 8
  %37 = load i32*, i32** %6, align 8
  %38 = call i32 @ce_match_stat_basic(%struct.cache_entry* %36, i32* %37)
  store i32 %38, i32* %8, align 4
  %39 = load i32, i32* %8, align 4
  store i32 %39, i32* %4, align 4
  br label %40

40:                                               ; preds = %35, %34, %23
  %41 = load i32, i32* %4, align 4
  ret i32 %41
}

declare dso_local i64 @ce_skip_worktree(%struct.cache_entry*) #1

declare dso_local i32 @ce_match_stat_basic(%struct.cache_entry*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
